fix typo for invisible

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ export(doc_scroll)
 export(doc_type)
 export(get_absolute_location)
 export(hot_keys)
+export(is_pyautogui_installed)
 export(nullify)
 importFrom(magrittr,"%>%")
