add a readme, new function and some documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(doc_mouse_move)
 export(doc_mouse_move_to)
 export(doc_mouse_position)
 export(doc_press)
+export(doc_press_tabs)
 export(doc_screenshot)
 export(doc_scroll)
 export(doc_type)
